@startuml classes
package "Investor Package" #FDDDDD {
    class Investor {
        + chart
    }

}

package "Chart Package" #FDDDDD {
    class Chart {
        + values
        + SharpeRatio()
    }
}

package "Simulation" #DDFDDD {
    class Simulation {
        + date
        + step()
    }

    class Book {
        + deposit()
        + add()
        + remove()
        + valuate()
    }

    abstract class Strategy {
        + open()
        + close()
    }

    Simulation *-- Book
    Simulation *-- Strategy

    class Exchange {
        + fees
        + buy()
        + sell()
    }

    class Balance {
        + cash
        + invested
        + value
        + profit
    }

    class Journal {
    }

    class Portfolio {
        + add()
        + remove()
        + invested()
        + profit()
        + value()

    }

    Book *-- Exchange
    Book *-- Balance
    Book *-- Journal
    Book *-- Portfolio
    Strategy o-- Portfolio
    Strategy o-- Investors

    class Position {
        + investor
        + date
        + amount
        + profit()
        + value()
        + expired(): bool
    }


    Portfolio *-- Position

    class Transaction {
        + date: DateFormat
        + action: Actions
        + name?: string
        + amount?: number
        + invested: number
        + profit?: number
        + cash: number
        + value: number
    }

    Journal *-- Transaction

    class Convictions

    class Conviction {
        + name: string
        + source: Investor | Position
        + value: number
        + reason: string
    }

    Convictions *-- Conviction


}

Investors o-- Investor : Selects
Position o-- Investor : References
Journal *-- Chart : Creates
Investor *-- Chart : Includes

package "Portfolio Management" #FDDDDD {
    class Policy {}
    class Ranking {}
    class Timing {}
    class Investors {}
    class Positions {}
}

@enduml
